--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -8,18 +8,18 @@
         "searchPlaceholder": "მომხმარებლების ძიება...",
         "loading": "მომხმარებლების ჩატვირთვა...",
         "noUsers": "მომხმარებლები არ მოიძებნა.",
-        "createLink": "შექმენით ახალი მომხმარებელი",
-        "createUser": {
-            "title": "მომხმარებლის შექმნა",
-            "placeholder": "შეიყვანეთ მომხმარებლის სახელი",
-            "creating": "შექმნა მიმდინარეობს...",
-            "button": "შექმნა",
-            "success": "მომხმარებელი წარმატებით შეიქმნა!",
-            "error": "შეცდომა:",
-            "unknownError": "უცნობი შეცდომა",
-            "or": "ან",
-            "login": "შესვლა"
-        }
+        "createLink": "შექმენით ახალი მომხმარებელი"
+    },
+    "createUser": {
+        "title": "მომხმარებლის შექმნა",
+        "placeholder": "შეიყვანეთ მომხმარებლის სახელი",
+        "creating": "შექმნა მიმდინარეობს...",
+        "button": "შექმნა",
+        "success": "მომხმარებელი წარმატებით შეიქმნა!",
+        "error": "შეცდომა:",
+        "unknownError": "უცნობი შეცდომა",
+        "or": "ან",
+        "login": "შესვლა"
     },
     "userMenu": {
         "profile": "პროფილი",
