--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -8,18 +8,18 @@
         "searchPlaceholder": "Поиск пользователей...",
         "loading": "Загрузка пользователей...",
         "noUsers": "Пользователи не найдены.",
-        "createLink": "Создать нового пользователя",
-        "createUser": {
-            "title": "Создать пользователя",
-            "placeholder": "Введите имя пользователя",
-            "creating": "Создание...",
-            "button": "Создать",
-            "success": "Пользователь успешно создан!",
-            "error": "Ошибка:",
-            "unknownError": "Неизвестная ошибка",
-            "or": "или",
-            "login": "Войти"
-        }
+        "createLink": "Создать нового пользователя"
+    },
+    "createUser": {
+        "title": "Создать пользователя",
+        "placeholder": "Введите имя пользователя",
+        "creating": "Создание...",
+        "button": "Создать",
+        "success": "Пользователь успешно создан!",
+        "error": "Ошибка:",
+        "unknownError": "Неизвестная ошибка",
+        "or": "или",
+        "login": "Войти"
     },
     "userMenu": {
         "profile": "Профиль",
