--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -29,5 +29,11 @@
         "theme": "თემა",
         "theme.light": "ღია",
         "theme.dark": "მუქი"
+    },
+    "sidebar": {
+        "study": "სიტყვების დამახსოვრება",
+        "addWords": "სიტყვების დამატება",
+        "repeat": "სიტყვების გამეორება",
+        "wordList": "ბიბლიოთეკა"
     }
 }
