--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -29,5 +29,11 @@
         "theme": "Тема",
         "theme.light": "Светлая",
         "theme.dark": "Тёмная"
+    },
+    "sidebar": {
+        "study": "Запоминание слов",
+        "addWords": "Добавление слов",
+        "repeat": "Повторение слов",
+        "wordList": "Библиотека"
     }
 }
