added words service and renamed user config

--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -34,6 +34,6 @@
         "study": "Exercise Words ",
         "addWords": "Add Words",
         "repeat": "Remind Words",
-        "wordList": "Library"
+        "wordList": "Vocabulary"
     }
 }
