--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -34,6 +34,6 @@
         "study": "სიტყვების დამახსოვრება",
         "addWords": "სიტყვების დამატება",
         "repeat": "სიტყვების გამეორება",
-        "wordList": "ბიბლიოთეკა"
+        "wordList": "ლექსიკონი"
     }
 }
