--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -34,6 +34,6 @@
         "study": "Запоминание слов",
         "addWords": "Добавление слов",
         "repeat": "Повторение слов",
-        "wordList": "Библиотека"
+        "wordList": "Словарь"
     }
 }
