--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -35,5 +35,21 @@
         "addWords": "სიტყვების დამატება",
         "repeat": "სიტყვების გამეორება",
         "wordList": "ლექსიკონი"
+    },
+    "addWordsPage": {
+        "title": "დაამატე ახალი სიტყვა",
+        "fromLanguage": "საწყისი ენა",
+        "toLanguage": "თარგმნის ენა",
+        "original": "საწყისი სიტყვა",
+        "translation": "თარგმანი",
+        "submit": "სიტყვის დამატება",
+        "success": "სიტყვა წარმატებით შეინახა!",
+        "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში. გსურთ მეცადინეობის დაწყება?",
+        "practice": "გამოიყენე ახლავე"
+    },
+    "languages": {
+        "english": "ინგლისური",
+        "russian": "რუსული",
+        "georgian": "ქართული"
     }
 }
