--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -35,5 +35,21 @@
         "addWords": "Добавление слов",
         "repeat": "Повторение слов",
         "wordList": "Словарь"
+    },
+    "addWordsPage": {
+        "title": "Добавить новое слово",
+        "fromLanguage": "Исходный язык",
+        "toLanguage": "Язык перевода",
+        "original": "Исходное слово",
+        "translation": "Перевод",
+        "submit": "Добавить слово",
+        "success": "Слово сохранено добавлено!",
+        "wordExists": "Это слово уже есть в вашем словаре. Хотите заняться практикой?",
+        "practice": "Попрактиковать"
+    },
+    "languages": {
+        "english": "Английский",
+        "russian": "Русский",
+        "georgian": "Грузинский"
     }
 }
