added "add a new word" component

--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -51,5 +51,9 @@
         "english": "English",
         "russian": "Russian",
         "georgian": "Georgian"
+    },
+    "errors": {
+        "wordExists": "Word with this translation already exists in the dictionary. Do you want to repeat?",
+        "default": "An unexpected error occurred."
     }
 }
