--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -51,5 +51,9 @@
         "english": "ინგლისური",
         "russian": "რუსული",
         "georgian": "ქართული"
+    },
+    "errors": {
+        "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში. გსურთ გამეორება?",
+        "default": "მოხდა უცნობი შეცდომა."
     }
 }
