--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -51,5 +51,9 @@
         "english": "Английский",
         "russian": "Русский",
         "georgian": "Грузинский"
+    },
+    "errors": {
+        "wordExists": "Слово с таким переводом уже есть в словаре. Не желателе повторить? ",
+        "default": "Произошла неизвестная ошибка."
     }
 }
