change for change

--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -31,7 +31,7 @@
         "theme.dark": "მუქი"
     },
     "sidebar": {
-        "study": "სიტყვების დამახსოვრება",
+        "study": "სიტყვების შესწავლა",
         "addWords": "სიტყვების დამატება",
         "repeat": "სიტყვების გამეორება",
         "wordList": "ლექსიკონი"
