--- a/src/shared/language/locales/en/translation.json
+++ b/src/shared/language/locales/en/translation.json
@@ -31,7 +31,7 @@
         "theme.dark": "Dark"
     },
     "sidebar": {
-        "study": "Exercise Words ",
+        "study": "Practice Words ",
         "addWords": "Add Words",
         "repeat": "Remind Words",
         "wordList": "Vocabulary"
@@ -53,7 +53,7 @@
         "georgian": "Georgian"
     },
     "errors": {
-        "wordExists": "Word with this translation already exists in the dictionary. Do you want to repeat?",
+        "wordExists": "Word with this translation already exists in the dictionary. Do you want to practice?",
         "default": "An unexpected error occurred."
     }
 }
