--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -44,7 +44,7 @@
         "translation": "თარგმანი",
         "submit": "სიტყვის დამატება",
         "success": "სიტყვა წარმატებით შეინახა!",
-        "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში. გსურთ მეცადინეობის დაწყება?",
+        "wordExists": "სიტყვა ამ ტარგმანით უკვე არსებობს თქვენს ლექსიკონში.",
         "practice": "გამოიყენე ახლავე"
     },
     "languages": {
