--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -44,7 +44,7 @@
         "translation": "Перевод",
         "submit": "Добавить слово",
         "success": "Слово сохранено добавлено!",
-        "wordExists": "Это слово уже есть в вашем словаре. Хотите заняться практикой?",
+        "wordExists": "Слово с этим переводом уже есть в вашем словаре.",
         "practice": "Попрактиковать"
     },
     "languages": {
