--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -48,12 +48,27 @@
         "practice": "გამოიყენე ახლავე"
     },
     "languages": {
-        "english": "ინგლისური",
-        "russian": "რუსული",
-        "georgian": "ქართული"
+        "en": "ინგლისური",
+        "ru": "რუსული",
+        "ka": "ქართული"
     },
     "errors": {
         "wordExists": "ეს სიტყვა უკვე არსებობს თქვენს ლექსიკონში. გსურთ გამეორება?",
         "default": "მოხდა უცნობი შეცდომა."
+    },
+    "pagination": {
+        "prev": "უკან",
+        "next": "წინ",
+        "page": "გვერდი:",
+        "itemsPerPage": "სიტყვები გვერდზე"
+    },
+    "table": {
+        "origin": "საწყისი",
+        "translation": "თარგმანი",
+        "vocabulary": "ლექსიკონი",
+        "memoryScore": "მეხსიერების ქულა",
+        "learned": "ნასწავლი",
+        "repeat": "გამეორების თარიღი",
+        "addedToVocab": "დამატებულია"
     }
 }
