--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -55,5 +55,21 @@
     "errors": {
         "wordExists": "Слово с таким переводом уже есть в словаре. Не желателе повторить? ",
         "default": "Произошла неизвестная ошибка."
+    },
+
+    "pagination": {
+        "prev": "Пребыдущая",
+        "next": "Следующая",
+        "page": "Страница:",
+        "itemsPerPage": "Слов на странице"
+    },
+    "table": {
+        "origin": "Исходное",
+        "translation": "Перевод",
+        "vocabulary": "Словарь",
+        "memoryScore": "Очки Памяти",
+        "learned": "Выучено",
+        "repeat": "Повторить",
+        "addedToVocab": "Добавлено"
     }
 }
