--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -34,8 +34,11 @@
         "study": "სიტყვების შესწავლა",
         "addWords": "სიტყვების დამატება",
         "repeat": "სიტყვების გამეორება",
-        "wordList": "ლექსიკონი"
+        "wordList": "ლექსიკონი",
+        "manageWords": "სიტყვების მიმოხილვა"
     },
+    "manageWords": "სიტყვების მიმოხილვა",
+
     "addWordsPage": {
         "title": "დაამატე ახალი სიტყვა",
         "fromLanguage": "საწყისი ენა",
