--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -34,8 +34,10 @@
         "study": "Запоминание слов",
         "addWords": "Добавление слов",
         "repeat": "Повторение слов",
-        "wordList": "Словарь"
+        "wordList": "Словарь",
+        "manageWords": "Просмотр слов"
     },
+
     "addWordsPage": {
         "title": "Добавить новое слово",
         "fromLanguage": "Исходный язык",
@@ -56,6 +58,7 @@
         "wordExists": "Слово с таким переводом уже есть в словаре. Не желателе повторить? ",
         "default": "Произошла неизвестная ошибка."
     },
+    "manageWords": "Просмотр слов",
 
     "pagination": {
         "prev": "Пребыдущая",
