--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -1,7 +1,8 @@
 {
     "common": {
         "please_log_in": "გთხოვთ, შეხვიდეთ",
-        "welcome_user": "კეთილი იყოს თქვენი მობრძანება, {{nickname}}!"
+        "welcome_user": "კეთილი იყოს თქვენი მობრძანება, {{nickname}}!",
+        "or": "ან"
     },
     "auth": {
         "title": "შესვლა",
@@ -94,10 +95,12 @@
         "next": "შემდეგი",
         "studyWords": "სიტყვების სწავლა",
         "noWordsPassed": "სიტყვები არ იყო გადაცემული ბარათების ვარჯიშისთვის.",
-        "chooseWords": "აირჩიე სიტყვები სწავლისთვის",
+        "chooseWords": "სიტყვების არჩევა",
         "studyNewWords": "ახალი სიტყვების სწავლა",
-        "repeatOldWords": "ძველი სიტყვების გამეორება",
+        "repeatOldWords": "სიტყვების გამეორება",
         "loading": "ჩატვირთვა...",
-        "selectNumberOfWords": "აირჩიეთ სიტყვების რაოდენობა"
+        "selectNumberOfWords": "აირჩიეთ სიტყვების რაოდენობა",
+        "all": "ყველა",
+        "continue": "სწავლის გაგრძელება"
     }
 }
