--- a/src/shared/language/locales/ka/translation.json
+++ b/src/shared/language/locales/ka/translation.json
@@ -101,6 +101,7 @@
         "loading": "ჩატვირთვა...",
         "selectNumberOfWords": "აირჩიეთ სიტყვების რაოდენობა",
         "all": "ყველა",
-        "continue": "სწავლის გაგრძელება"
+        "continue": "სწავლის გაგრძელება",
+        "testNewWords": "ახალი სიტყვების ტესტის დაწყება"
     }
 }
