--- a/src/shared/language/locales/ru/translation.json
+++ b/src/shared/language/locales/ru/translation.json
@@ -100,6 +100,7 @@
         "loading": "Загрузка...",
         "selectNumberOfWords": "Выберите количество слов",
         "all": "Всё",
-        "continue": "Продолжить обучение"
+        "continue": "Продолжить обучение",
+        "testNewWords": "Начать тест новых слов"
     }
 }
